// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserReducer should handle all defined error types: rejected types DELETE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
    "session": Object {
      "errorCodes": Array [],
      "locale": null,
    },
  },
  "type": "DELETE_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types GET_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
    "session": Object {
      "errorCodes": Array [],
      "locale": null,
    },
  },
  "type": "GET_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types UPDATE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
    "session": Object {
      "errorCodes": Array [],
      "locale": null,
    },
  },
  "type": "UPDATE_USER_OPTIN_REJECTED",
}
`;

exports[`UserReducer should handle all defined error types: rejected types USER_AUTH 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "error": true,
      "errorCodes": Array [],
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "locale": null,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "USER_AUTH_REJECTED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types DELETE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "data": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
    "session": Object {
      "errorCodes": Array [],
      "locale": null,
    },
  },
  "type": "DELETE_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types GET_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "data": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
    "session": Object {
      "errorCodes": Array [],
      "locale": null,
    },
  },
  "type": "GET_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types UPDATE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "data": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
    "session": Object {
      "errorCodes": Array [],
      "locale": null,
    },
  },
  "type": "UPDATE_USER_OPTIN_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types USER_AUTH 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "data": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
      "date": null,
      "error": false,
      "errorCodes": Array [],
      "errorMessage": "",
      "fulfilled": true,
      "locale": null,
      "meta": Object {},
      "pending": false,
      "status": 0,
    },
  },
  "type": "USER_AUTH_FULFILLED",
}
`;

exports[`UserReducer should handle all defined fulfilled types: fulfilled types USER_LOCALE 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "errorCodes": Array [],
      "locale": Object {
        "permissions": Array [],
        "test": "success",
        "user": Object {
          "identity": Object {
            "user": Object {
              "is_org_admin": true,
            },
          },
        },
      },
    },
  },
  "type": "USER_LOCALE_FULFILLED",
}
`;

exports[`UserReducer should handle all defined pending types: pending types DELETE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "pending": true,
    },
    "session": Object {
      "errorCodes": Array [],
      "locale": null,
    },
  },
  "type": "DELETE_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types GET_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "pending": true,
    },
    "session": Object {
      "errorCodes": Array [],
      "locale": null,
    },
  },
  "type": "GET_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types UPDATE_USER_OPTIN 1`] = `
Object {
  "result": Object {
    "optin": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "meta": Object {},
      "pending": true,
    },
    "session": Object {
      "errorCodes": Array [],
      "locale": null,
    },
  },
  "type": "UPDATE_USER_OPTIN_PENDING",
}
`;

exports[`UserReducer should handle all defined pending types: pending types USER_AUTH 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "error": false,
      "errorCodes": Array [],
      "errorMessage": "",
      "fulfilled": false,
      "locale": null,
      "meta": Object {},
      "pending": true,
    },
  },
  "type": "USER_AUTH_PENDING",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 400 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "errorCodes": Array [],
      "locale": null,
    },
  },
  "type": "4XX",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 401 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "error": true,
      "errorCodes": Array [
        "SUBSCRIPTIONS1004",
      ],
      "errorMessage": "Request failed with status code 401",
      "locale": null,
      "status": 401,
    },
  },
  "type": "4XX",
}
`;

exports[`UserReducer should handle specific http status types: http status 4XX 403 1`] = `
Object {
  "result": Object {
    "optin": Object {},
    "session": Object {
      "error": true,
      "errorCodes": Array [
        "SUBSCRIPTIONS1004",
      ],
      "errorMessage": "Request failed with status code 403",
      "locale": null,
      "status": 403,
    },
  },
  "type": "4XX",
}
`;
